--- a/Exercicio-bootstrap/index.html
+++ b/Exercicio-bootstrap/index.html
@@ -38,10 +38,11 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="/img/iphone-13.jfif" alt="Primeiro Slide">
+                <img class="d-block w-100" src="/img/iphone.jfif" alt="Primeiro Slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Iphone 13 Pro</h5>
                     <p>Novo iphone 13 Pro na melhor oferta apenas aqui!</p>
+                    <button type="button" class="btn btn-light">Comprar</button>
                 </div>
               </div>
               <div class="carousel-item">
@@ -49,6 +50,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Macbook Pro</h5>
                     <p>Novo macbook Pro na melhor oferta apenas aqui!</p>
+                    <button type="button" class="btn btn-light">Comprar</button>
                 </div>
               </div>
               <div class="carousel-item">
@@ -56,6 +58,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h5>TV Smart</h5>
                     <p>Nova TV Smart com a melhor oferta apenas aqui!</p>
+                    <button type="button" class="btn btn-light">Comprar</button>
                 </div>
               </div>
             </div>
@@ -70,9 +73,20 @@
           </div>
     </main>
 
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Destaques</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Preços</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Sobre</a></li>
+        </ul>
+        <p class="text-center text-muted">© 2022 Company, Inc</p>
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
